--- a/index.html
+++ b/index.html
@@ -1,74 +1,59 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <title>Seu Açaí</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="css/estilo.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 </head>
+
   <body>
+    <header>
+      <div id="area-cabecalho">
+        <div id="area-logo">
+          <h1><img src="imagens/pngegg.png" alt="" /></h1>
+        </div>
+        <div id="area-menu">
+            <h1>
+          <a href="index.html">Home</a>
+          <a href="açaí.html">Açaí</a>
+          <a href="cupuaçu.html">Cupuaçu</a>
+          <a href="contato.html">Contato</a>
+        </h1>
+        </div>
+      </div>
+      <!-- fim do cabeçalho -->
+    </header>
 
-<header>
+    <main>
+      <div id="area-principal">
+        <!--começo postagem-->
+        <div id="area-postagens">
+          <div class="postagem">
+            <h1>Seu açaí!</h1>
+            <img width="620px" src="imagens/ACAI-NO-COPO.png" />
+          <h2>
+            <p>
+              O sorvete de açaí é uma das tendências que vêm ganhando espaço
+              verão após verão. Leve, refrescante e energético, o açaí também é
+              bastante versátil e pode ser servido com uma série de
+              acompanhamentos. Assim, o público consumidor deste tipo de sorvete
+              é grande. Nesse sentido, tem crescido também o número de
+              interessados em investir na área. Seja para atuar como fornecedor
+              ou simplesmente para abastecer sua própria sorveteria ou quiosque,
+              fabricar o produto traz uma margem de lucro bastante interessante.
+              Mas como fazer açaí? Veja neste post algumas dicas para quem está
+              começando a produzir o sorvete!
+            </p>
+        </h2>
+          </div>
+          <!--fechamento postagem-->
+        </div>
+      </div>
+    </main>
 
-</header>
-
-<main>
-  
-    <main class="mt-3 container mb-5">
-        <div id="bar-1">
-        <h1>Formulario</h1>
-    </div>
-        <form action="" method="" class="row g-3">
-            <div class="col-12">
-                <label for="nome" class="form-label">Nome(Completo)</label>
-                <input type="text" name="" id="nome" placeholder="Seu Nome Completo" class="form-control">
-            </div>
-
-            <div class="col-4">
-                <label for="cpf" class="form-label">Cidade</label>
-                <input type="text" name="" id="cpf" placeholder="Sua Cidade" class="form-control">
-            </div>
-
-            <div class="col-6">
-                <label for="cpf" class="form-label">Estado</label>
-                <input type="text" name="" placeholder="Estado" id="cpf" class="form-control">
-            </div>
-
-
-            <div class="col-6">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" name="" placeholder="Seu endereço De Email" id="email" class="form-control">
-            </div>
-
-            <div class="col-4">
-                <label for="senha" class="form-label">Senha</label>
-                <input type="password" placeholder="Senha" name="" id="senha" class="form-control">
-            </div>
-
-            <div class="col-2">
-                <label for="cpf" class="form-label">Zip</label>
-                <input type="text" name="" id="cpf" class="form-control" placeholder="Enter Zip Code" >
-            </div>
-
-
-
-            <div class="col-12 d-flex justify-content-end mt-5">
-                <button class="btn btn-success me-2">Enviar</button>
-                <button class="btn btn-danger">Cancelar</button>
-            </div>
-        </form>
-</main>
-
-<footer>
-
-
-
-</footer>
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
